--- a/cloud/aq/index.html
+++ b/cloud/aq/index.html
@@ -354,6 +354,9 @@
 
 <h2 id="stack-tradicional-jee:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;tradicional&rdquo; JEE</h2>
 
+<p><img src="http://canigo.ctti.gencat.cat/related/cloud/spring.png" width="200">
+<img src="http://canigo.ctti.gencat.cat/related/cloud/jsf.jpg" width="200"></p>
+
 <p>Aplicació JSF (Java Server Faces) amb context &ldquo;/AppJava&rdquo; per separació contingut estàtic i dinàmic.</p>
 
 <div class="message warning">
@@ -443,6 +446,10 @@ $ docker-compose -f ./src/main/docker/docker-compose.yml up -d
 
 <h2 id="stack-arquitectura-moderna-jee:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;arquitectura moderna&rdquo; JEE</h2>
 
+<p><img src="http://canigo.ctti.gencat.cat/related/cloud/springboot.png" width="200">
+<img src="http://canigo.ctti.gencat.cat/related/cloud/resftulapi.jpg" width="200">
+<img src="http://canigo.ctti.gencat.cat/related/cloud/htmljscss.png" width="200"></p>
+
 <p>Aplicació basada en serveis REST i presentació desacoblada</p>
 
 <p>Podeu trobar el codi font d&rsquo;aquesta demo a <a href="https://github.com/gencatcloud/demo-JEE-REST">Github</a>.</p>
@@ -502,7 +509,7 @@ $ docker-compose -f ./src/main/docker/docker-compose.yml up -d
 
 <h2 id="stack-mean:86806683e3ea945dc5182e8e6cca12d7">Stack MEAN</h2>
 
-<p><img src="/related/cloud/stack_mean.png" alt="MEAN" title="MEAN" /></p>
+<p><img src="http://canigo.ctti.gencat.cat/related/cloud/stack_mean.png" width="200"></p>
 
 <p>Aplicació basada en MongoDB+Express+AngularJS+NodeJS</p>
 
@@ -548,7 +555,7 @@ $ docker-compose -f ./docker/docker-compose.yml up -d
 
 <h2 id="stack-lamp:86806683e3ea945dc5182e8e6cca12d7">Stack LAMP</h2>
 
-<p><img src="/related/cloud/lamp.gif" alt="LAMP" title="LAMP" /></p>
+<p><img src="http://canigo.ctti.gencat.cat/related/cloud/lamp.gif" width="200"></p>
 
 <p>Aplicació basada en Linux+PHP+MySQL</p>
 
