--- a/cloud/aq/index.html
+++ b/cloud/aq/index.html
@@ -354,8 +354,7 @@
 
 <h2 id="stack-tradicional-jee:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;tradicional&rdquo; JEE</h2>
 
-<p><img src="http://canigo.ctti.gencat.cat/related/cloud/spring.png" width="200">
-<img src="http://canigo.ctti.gencat.cat/related/cloud/jsf.jpg" width="200"></p>
+<p><img src="/related/cloud/spring.png" alt="Spring" title="Spring" /> <img src="/related/cloud/jsf.jpg" alt="JSF" title="JSF" /></p>
 
 <p>Aplicació JSF (Java Server Faces) amb context &ldquo;/AppJava&rdquo; per separació contingut estàtic i dinàmic.</p>
 
@@ -446,9 +445,7 @@ $ docker-compose -f ./src/main/docker/docker-compose.yml up -d
 
 <h2 id="stack-arquitectura-moderna-jee:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;arquitectura moderna&rdquo; JEE</h2>
 
-<p><img src="http://canigo.ctti.gencat.cat/related/cloud/springboot.png" width="200">
-<img src="http://canigo.ctti.gencat.cat/related/cloud/resftulapi.jpg" width="200">
-<img src="http://canigo.ctti.gencat.cat/related/cloud/htmljscss.png" width="200"></p>
+<p><img src="/related/cloud/springboot.png" alt="Spring" title="Spring Boot" /> <img src="/related/cloud/resftulapi.jpg" alt="Resftul API" title="Resftul API" /> <img src="/related/cloud/htmljscss.png" alt="HTML5 JS CSS" title="HTML5 JS CSS" /></p>
 
 <p>Aplicació basada en serveis REST i presentació desacoblada</p>
 
@@ -509,7 +506,7 @@ $ docker-compose -f ./src/main/docker/docker-compose.yml up -d
 
 <h2 id="stack-mean:86806683e3ea945dc5182e8e6cca12d7">Stack MEAN</h2>
 
-<p><img src="http://canigo.ctti.gencat.cat/related/cloud/stack_mean.png" width="200"></p>
+<p><img src="/related/cloud/stack_mean.png" alt="MEAN" title="MEAN" /></p>
 
 <p>Aplicació basada en MongoDB+Express+AngularJS+NodeJS</p>
 
@@ -555,7 +552,7 @@ $ docker-compose -f ./docker/docker-compose.yml up -d
 
 <h2 id="stack-lamp:86806683e3ea945dc5182e8e6cca12d7">Stack LAMP</h2>
 
-<p><img src="http://canigo.ctti.gencat.cat/related/cloud/lamp.gif" width="200"></p>
+<p><img src="/related/cloud/lamp.gif" alt="LAMP" title="LAMP" /></p>
 
 <p>Aplicació basada en Linux+PHP+MySQL</p>
 
