--- a/cloud/lifecycle/index.html
+++ b/cloud/lifecycle/index.html
@@ -303,17 +303,17 @@
 
 						<p><em><span style='color:red;'>DRAFT</span></em></p>
 
-<p>Gràcies a l&rsquo;ús del Container Cloud el cicle de vida de les aplicacions pot automatitzar-se de forma fàcil. És aquí on el SIC (Servei d&rsquo;Integració Continua) té un paper esencial ja que és l&rsquo;encarregat de proporcionar els processos per assolir aquesta automatització.</p>
+<p>Gràcies a l&rsquo;ús del Container Cloud el cicle de vida de les aplicacions pot automatitzar-se de forma fàcil. És aquí on el SIC (Servei d&rsquo;Integració Continua) té un paper esencial, ja que és l&rsquo;encarregat de proporcionar els processos per assolir aquesta automatització.</p>
 
-<p>Expliquem, des d&rsquo;un inici, quines són les passes que segueix una aplicació fins arribar a executar-se en el Container Cloud:</p>
+<p>Expliquem, des d&rsquo;un inici, quines són les passes que segueix una aplicació fins a arribar a executar-se en el Container Cloud:</p>
 
 <p><strong>Definició d&rsquo;Arquitectura</strong></p>
 
-<p>És en aquesta fase on el proveïdor d&rsquo;aplicacions, conjuntament amb Integració de Solucions, analitzaran si l&rsquo;aplicació és susceptible d&rsquo;anar al Container Cloud. Amb el suport de l&rsquo;equip d&rsquo;Administració Cloud i Arquitectura CTTI es pendrà una decisió i es determinarà quin és el cloud destí més apropiat.</p>
+<p>És en aquesta fase on el proveïdor d&rsquo;aplicacions, conjuntament amb Integració de Solucions, analitzaran si l&rsquo;aplicació és susceptible d&rsquo;anar al Container Cloud. Amb el suport de l&rsquo;equip d&rsquo;Administració Cloud i Arquitectura CTTI es prendrà una decisió i es determinarà quin és el cloud destí més apropiat.</p>
 
 <p><strong>Alta projecte</strong></p>
 
-<p>En aquesta fase s&rsquo;aprovisionaran els recursos necessaris en el cloud destí i en el SIC per al desplegament de l&rsquo;aplicació, així com els usuaris d&rsquo;accés per els proveïdors d&rsquo;aplicacions per la monitorització de l&rsquo;aplicació (logs, consum recursos, &hellip;) i el seu desplegament.</p>
+<p>En aquesta fase s&rsquo;aprovisionaran els recursos necessaris en el cloud destí i en el SIC per al desplegament de l&rsquo;aplicació, així com els usuaris d&rsquo;accés pels proveïdors d&rsquo;aplicacions per la monitorització de l&rsquo;aplicació (logs, consum recursos, &hellip;) i el seu desplegament.</p>
 
 <p><strong>Construcció i desplegament</strong></p>
 
@@ -334,6 +334,8 @@
 <p>Pel que fa als entorns, per defecte existiran un de PROductiu, i un altre de PREproductiu. Aquest últim amb caràcter temporal. Els contenidors d&rsquo;aquest &ldquo;espai/entorn&rdquo; temporal s&rsquo;eliminaran després de cert temps d&rsquo;inactivitat o després d&rsquo;un temps d&rsquo;expiració.</p>
 
 <p>Per els desplegaments a l&rsquo;entorn de PROducció s&rsquo;aplicarà l&rsquo;estratègia de <a href="http://martinfowler.com/bliki/BlueGreenDeployment.html">blue-green deployment</a>. Els contenidors &ldquo;antics&rdquo; s&rsquo;eliminaran.</p>
+
+<p>A continuació mostrem un diagrama on s&rsquo;il·lustra el flux i els diferents equips que intervenen en el cicle de vida d&rsquo;una aplicació al Container Cloud:</p>
 
 <p><img src="/related/cloud/lifecycle.png" alt="Cicle de Vida Container Cloud" /></p>
 
