--- a/cloud/lifecycle/index.html
+++ b/cloud/lifecycle/index.html
@@ -313,9 +313,10 @@
 
 <p><strong>Alta projecte</strong></p>
 
-<p>En aquesta fase s&rsquo;aprovisionaran els recursos necessaris en el cloud destí i en el SIC per al desplegament de l&rsquo;aplicació, així com els usuaris d&rsquo;accés pels proveïdors d&rsquo;aplicacions per la monitorització de l&rsquo;aplicació (logs, consum recursos, &hellip;) i el seu desplegament.</p>
-
-<p><strong>Construcció i desplegament</strong></p>
+<p>En aquesta fase s&rsquo;aprovisionaran els recursos necessaris en el cloud destí i en el SIC per al desplegament de l&rsquo;aplicació, així com els usuaris d&rsquo;accés pels proveïdors d&rsquo;aplicacions per la monitorització de l&rsquo;aplicació (logs, consum recursos, &hellip;) i el seu desplegament.
+\
+\
+<strong>Construcció i desplegament</strong></p>
 
 <p>Les aplicacions es construiran i desplegaran sempre des del SIC. Els elements utilitzats per la &ldquo;containerització&rdquo; de les aplicacions seran els següents:</p>
 
