--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 				            
 								<li>
 									<a href="http://canigo.ctti.gencat.cat/noticies/2016-07-06-Cloud-documentacio/" class="a-vermell">Container Cloud. Publicació de la documentació al web d&#39;Arquitectura</a> (06-07-2016)
-									<p>Publicació de la documentació del Container Cloud al web d&#39;arquitectura<br /><br /></p>
+									<p>Ha estat publicada la documentació del Container Cloud al web d&#39;arquitectura. En ella podreu trobar els diferents elements del catàleg, les plataformes cloud de referència, arquitectures tipus i la definició del cicle de vida de les aplicacions<br /><br /></p>
 								</li>
 							
 								<li>
