--- a/noticies/2016-07-06-Cloud-documentacio/index.html
+++ b/noticies/2016-07-06-Cloud-documentacio/index.html
@@ -13,7 +13,7 @@
 
 	<script>
 		document.write("<meta name=\"titol\" content=\"Container Cloud. Publicació de la documentació al web d\x27Arquitectura\" />");
-		document.write("<meta name=\"description\" content=\"Publicació de la documentació del Container Cloud al web d\x27arquitectura\" />");
+		document.write("<meta name=\"description\" content=\"Ha estat publicada la documentació del Container Cloud al web d\x27arquitectura. En ella podreu trobar els diferents elements del catàleg, les plataformes cloud de referència, arquitectures tipus i la definició del cicle de vida de les aplicacions\" />");
 	</script>
 
 	
