--- a/cloud/lifecycle/index.html
+++ b/cloud/lifecycle/index.html
@@ -303,7 +303,7 @@
 
 						
 
-<p>Gràcies a l&rsquo;ús del Container Cloud el cicle de vida de les aplicacions pot automatitzar-se de forma fàcil. És aquí on el SIC (Servei d&rsquo;Integració Continua) té un paper esencial, ja que és l&rsquo;encarregat de proporcionar els processos per assolir aquesta automatització.</p>
+<p>Gràcies a l&rsquo;ús del Container Cloud el cicle de vida de les aplicacions pot automatitzar-se de forma fàcil. És aquí on el SIC (Servei d&rsquo;Integració Continua) té un paper essencial, ja que és l&rsquo;encarregat de proporcionar els processos per assolir aquesta automatització.</p>
 
 <p>Expliquem, des d&rsquo;un inici, quines són les passes que segueix una aplicació fins a arribar a executar-se en el Container Cloud:</p>
 
@@ -333,7 +333,7 @@
 
 <p>Pel que fa als entorns, per defecte existiran un de PROductiu, i un altre de PREproductiu. Aquest últim amb caràcter temporal. Els contenidors d&rsquo;aquest &ldquo;espai/entorn&rdquo; temporal s&rsquo;eliminaran després de cert temps d&rsquo;inactivitat o després d&rsquo;un temps d&rsquo;expiració.</p>
 
-<p>Per els desplegaments a l&rsquo;entorn de PROducció s&rsquo;aplicarà l&rsquo;estratègia de <a href="http://martinfowler.com/bliki/BlueGreenDeployment.html">blue-green deployment</a>. Els contenidors &ldquo;antics&rdquo; s&rsquo;eliminaran.</p>
+<p>Per als desplegaments a l&rsquo;entorn de PROducció s&rsquo;aplicarà l&rsquo;estratègia de <a href="http://martinfowler.com/bliki/BlueGreenDeployment.html">blue-green deployment</a>. Els contenidors &ldquo;antics&rdquo; s&rsquo;eliminaran.</p>
 
 <p>A continuació mostrem un diagrama on s&rsquo;il·lustra el flux i els diferents equips que intervenen en el cicle de vida d&rsquo;una aplicació al Container Cloud:</p>
 
