--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
 						<ul class="list-group llistat_enllacos_filet_cont contingut">
 				            
 								<li>
-									<a href="http://canigo.ctti.gencat.cat/noticies/2016-08-02-SIC-Gestio-Dependencies-ANT-dotNET/" class="a-vermell">SIC. Gestió de dependències per aplicacions .NET i JAVA al SIC</a> (02-08-2016)
-									<p>El SIC ha incorporat les tecnologies ANT i .NET. Us expliquem com implementar la gestió de dependències amb aquestes tecnologies.<br /><br /></p>
+									<a href="http://canigo.ctti.gencat.cat/noticies/2016-08-02-SIC-Gestio-Dependencies-dotNET/" class="a-vermell">SIC. Gestió de dependències per aplicacions .NET</a> (02-08-2016)
+									<p>Procediment de gestió de dependències amb aplicacions .NET al SIC<br /><br /></p>
 								</li>
 							
 								<li>
