--- a/noticies/2016-07-06-Cloud-documentacio/index.html
+++ b/noticies/2016-07-06-Cloud-documentacio/index.html
@@ -318,7 +318,7 @@
 <li><a href="http://canigo.ctti.gencat.cat/cloud/caas/"><strong>Plataformes cloud de referència</strong></a></li>
 </ul>
 
-<p>Enumeració de les diferents plataformes que composen l&rsquo;entorn Container Cloud.</p>
+<p>Enumeració de les diferents plataformes que componguen l&rsquo;entorn Container Cloud.</p>
 
 <ul>
 <li><a href="http://canigo.ctti.gencat.cat/cloud/aq/"><strong>Arquitectures tipus</strong></a></li>
