--- a/noticies/2016-08-02-SIC-Gestio-Dependencies-dotNET/index.html
+++ b/noticies/2016-08-02-SIC-Gestio-Dependencies-dotNET/index.html
@@ -355,7 +355,7 @@
 
 <p>Per tal que l&rsquo;empaquetat de l&rsquo;aplicació continuï funcionant a l&rsquo;entorn de desenvolupament, caldrà afegir la referència al Repository NuGet del Nexus del SIC (<a href="http://hudson.intranet.gencat.cat/nexus/content/groups/nuget-group/">http://hudson.intranet.gencat.cat/nexus/content/groups/nuget-group/</a>) a la configuració local (arxiu<code>Nuget.config</code>).</p>
 
-<p>Tot i així, en molts aspectes no és necessari haver d&rsquo;arribar a tant baix nivell. La comunitat .NET ofereix les següents solucions (no excloents entre sí):</p>
+<p>Tot i així, en molts aspectes no és necessari haver d&rsquo;arribar a tan baix nivell. La comunitat .NET ofereix les següents solucions (no excloents entre si):</p>
 
 <ul>
 <li><strong>NuGet Package Explorer</strong>: Per explorar paquets NuGet i construir-los visualment.</li>
