--- a/noticies/index.html
+++ b/noticies/index.html
@@ -351,7 +351,7 @@
 	<ul class="list-group llistat_enllacos_filet_cont">
 		
 		<li>
-			<a class="a-vermell" href="http://canigo.ctti.gencat.cat/noticies/2016-08-02-SIC-Gestio-Dependencies-dotNET/">SIC. Gestió de dependències per aplicacions .NET</a> (02-08-2016)
+			<a class="a-vermell" href="http://canigo.ctti.gencat.cat/noticies/2016-08-02-SIC-Gestio-Dependencies-dotNET/">SIC. Gestió de dependències per a aplicacions .NET</a> (02-08-2016)
 			<p>Procediment de gestió de dependències amb aplicacions .NET al SIC<br /><br /></p>
 		</li>
 	    
